Update store title from 'Awesome' to 'Mid'

--- a/storefront.html
+++ b/storefront.html
@@ -9,7 +9,7 @@
 <body>
  
   <header>
-    <h1>StudentID: bratur8370 | My Awesome Store</h1>
+    <h1>StudentID: bratur8370 | My Mid Store</h1>
   </header>
 
 
