Add contact section with form in index.html
Added a contact section with a form for user inquiries.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#products">Products</a></li>
       <li><a href="#contact">Contact</a></li>
+   <section id="contact">
+    <h2>Contact Us</h2>
+    <form id="contactForm" action="#" method="post">
+        <label for="senderName">Name:</label>
+        <input type="text" id="senderName" name="senderName" required>
+        <label for="senderEmail">Email:</label>
+        <input type="email" id="senderEmail" name="senderEmail" required>
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="5"></textarea>
+      
+        <input type="submit" value="Send Message">
+    </form>
+</section>
+
+
     </ul>
   </nav>
 
